<?xml version="1.0"?>
<package format="2">
  <name>sgs_server_ros</name>
  <version>0.0.1</version>
  <description>The sgs_server_ros package</description>
  <maintainer email="hi.kondo@thk.co.jp">hi-kondo</maintainer>
  <license>BSD</license>

  <author>hi-kondo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>message_generation</depend>

  <depend>moveit_ros_planning_interface</depend>

  <depend>seed_r7_ros_controller</depend>
  <depend>seed_r7_bringup</depend>
  <depend>seed_r7_navigation</depend>
  <depend>seed_r7_robot_interface</depend>
  <depend>seed_r7_moveit_config</depend>
  <depend>seed_r7_typef_moveit_config</depend>
  <depend>seed_r7_typeg_moveit_config</depend>



</package>
